--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -81,6 +81,9 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
+  .working-info h5 {
+    font-size: 17px;
+  }
 
   .about-content {
     max-width: 600px;
@@ -162,6 +165,9 @@
 
   .testimonial-width {
     width: 400px !important;
+  }
+  .scroll-button {
+    display: none;
   }
 }
 
