--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,7 +1,7 @@
 .img-box-square {
   width: 100%;
   aspect-ratio: 1 / 1;
-  overflow: hidden;
+  overflow: hidden !important;
   border-radius: 8px;
   position: relative;
 }
