--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -170,7 +170,7 @@
     display: none;
   }
   .stats-number {
-    font-size: 24px;
+    font-size: 24px !important;
     font-weight: bold;
     margin: 10px 0;
     color: #000;
