--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -184,6 +184,9 @@
     font-size: 16px !important;
     text-align: center !important;
   }
+  .product-image {
+    width: 100% !important;
+  }
 }
 
 /* ---------- Tablets (768px - 1024px) ---------- */
