stylesheet changes in styles

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -312,3 +312,8 @@ ul.quick-links li a {
   align-items: center;
   justify-content: center;
 }
+.banner-img {
+  width: 100%;
+
+  object-fit: cover;
+}
