--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -12,7 +12,7 @@
     font-size: 24px !important; /* For tablets and smaller devices */
   }
   .navbar-nav .nav-link {
-    font-size: 0.875rem;
+    font-size: 20px;
     font-family: "Montserrat", sans-serif;
     color: #000;
   }
