--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -51,10 +51,11 @@
   padding-left: 0;
   min-width: 200px;
   line-height: 2;
+  z-index: 99999;
 }
 
 .dropdown-item {
-  padding: 10px 16px;
+  padding: 8px 10px;
   line-height: 1.4;
   background-color: white;
   white-space: nowrap;
